exports[`test blank request 1`] = `
<div
  className={
    Object {
      "data-css-1t5zf7p": "",
    }
  }>
  <div
    className="sh sh--y"
    style={
      Object {
        "marginBottom": 40,
      }
    }>
    <h2
      className="sh-title">
      Cosmic Incursion
    </h2>
  </div>
  <div
    className={
      Object {
        "data-css-dgukzt": "",
      }
    }>
    
  </div>
  <div />
  <div>
    <h2
      className={
        Object {
          "data-css-16pm9zd": "",
        }
      }>
      CONTACT FORM
    </h2>
    <div
      className={
        Object {
          "data-css-1w0rge6": "",
        }
      }>
      (will not be shared with public; leave blank to submit anonymously)
    </div>
    <label
      className={
        Object {
          "data-css-12a7iqv": "",
        }
      }>
      <span>
        First Name (required)
      </span>
      <input
        className={
          Object {
            "data-css-b35x0h": "",
          }
        }
        name="firstName"
        onChange={[Function]}
        placeholder="First Name"
        value="" />
    </label>
    <label
      className={
        Object {
          "data-css-12a7iqv": "",
        }
      }>
      <span>
        Last Name (required)
      </span>
      <input
        className={
          Object {
            "data-css-b35x0h": "",
          }
        }
        name="lastName"
        onChange={[Function]}
        placeholder="Last Name"
        value="" />
    </label>
    <label
      className={
        Object {
          "data-css-12a7iqv": "",
        }
      }>
      <span>
        Email (required)
      </span>
      <input
        className={
          Object {
            "data-css-b35x0h": "",
          }
        }
        name="email"
        onChange={[Function]}
        placeholder="Email"
        type="email"
        value="" />
    </label>
    <label
      className={
        Object {
          "data-css-12a7iqv": "",
        }
      }>
      <span>
        Phone
      </span>
      <input
        className={
          Object {
            "data-css-b35x0h": "",
          }
        }
        name="phone"
        onChange={[Function]}
        placeholder="Phone"
        type="tel"
        value="" />
    </label>
  </div>
  <button
    disabled={true}
    onClick={[Function]}>
    Submit
  </button>
</div>
`;

exports[`test existing description 1`] = `
<div
  className={
    Object {
      "data-css-1t5zf7p": "",
    }
  }>
  <div
    className="sh sh--y"
    style={
      Object {
        "marginBottom": 40,
      }
    }>
    <h2
      className="sh-title">
      Cosmic Incursion
    </h2>
  </div>
  <div
    className={
      Object {
        "data-css-wb46si": "",
      }
    }>
    “
    Please pick up my bulk items. 
    ”
  </div>
  <div
    className={
      Object {
        "data-css-dgukzt": "",
      }
    }>
    
  </div>
  <div />
  <div>
    <h2
      className={
        Object {
          "data-css-16pm9zd": "",
        }
      }>
      CONTACT FORM
    </h2>
    <div
      className={
        Object {
          "data-css-1w0rge6": "",
        }
      }>
      (will not be shared with public; leave blank to submit anonymously)
    </div>
    <label
      className={
        Object {
          "data-css-12a7iqv": "",
        }
      }>
      <span>
        First Name (required)
      </span>
      <input
        className={
          Object {
            "data-css-b35x0h": "",
          }
        }
        name="firstName"
        onChange={[Function]}
        placeholder="First Name"
        value="" />
    </label>
    <label
      className={
        Object {
          "data-css-12a7iqv": "",
        }
      }>
      <span>
        Last Name (required)
      </span>
      <input
        className={
          Object {
            "data-css-b35x0h": "",
          }
        }
        name="lastName"
        onChange={[Function]}
        placeholder="Last Name"
        value="" />
    </label>
    <label
      className={
        Object {
          "data-css-12a7iqv": "",
        }
      }>
      <span>
        Email (required)
      </span>
      <input
        className={
          Object {
            "data-css-b35x0h": "",
          }
        }
        name="email"
        onChange={[Function]}
        placeholder="Email"
        type="email"
        value="" />
    </label>
    <label
      className={
        Object {
          "data-css-12a7iqv": "",
        }
      }>
      <span>
        Phone
      </span>
      <input
        className={
          Object {
            "data-css-b35x0h": "",
          }
        }
        name="phone"
        onChange={[Function]}
        placeholder="Phone"
        type="tel"
        value="" />
    </label>
  </div>
  <button
    disabled={true}
    onClick={[Function]}>
    Submit
  </button>
</div>
`;

exports[`test missing service 1`] = `
<div
  className={
    Object {
      "data-css-1t5zf7p": "",
    }
  }>
  <div
    className="sh sh--y"
    style={
      Object {
        "marginBottom": 40,
      }
    }>
    <h2
      className="sh-title">
      Service not found
    </h2>
  </div>
</div>
`;
